--- a/Cargo.toml
+++ b/Cargo.toml
@@ -23,7 +23,7 @@ path = "src/main.rs"
 
 
 [build-dependencies]
-clap = "3.1.6"
+clap = "3.1.8"
 clap_complete = "3.1.1"
 clap_mangen = "0.1.2"
 
@@ -35,7 +35,7 @@ predicates = "2.1.1"
 [dependencies]
 image = "0.24.1"
 colored = "2"
-clap = "3.1.6"
+clap = "3.1.8"
 terminal_size = "0.1.17"
 log = "0.4.16"
 env_logger = "0.9.0"
@@ -52,7 +52,7 @@ assets = [
       ["LICENSE", "usr/share/doc/artem/", "644"],
       #the completion files and man page is generated and copied by the build script
       ["deployment/assets/artem.bash", "usr/share/bash-completion/completions/artem", "644"],
-      ["deployment/assets/artem.fish", "usr/share/fish/vendor_completions.d/aretem.fish", "644"],
+      ["deployment/assets/artem.fish", "usr/share/fish/vendor_completions.d/artem.fish", "644"],
       ["deployment/assets/_artem", "usr/share/zsh/vendor-completions/", "644"],
 ]
 extended-description = """\
