--- a/Cargo.toml
+++ b/Cargo.toml
@@ -21,21 +21,25 @@ opt-level = 3
 name = "artem"
 path = "src/main.rs"
 
+[lib]
+name = "artem"
+path = "src/lib.rs"
 
 [build-dependencies]
-clap = "3.1.8"
+clap = "3.1.9"
 clap_complete = "3.1.1"
-clap_mangen = "0.1.2"
+clap_mangen = "0.1.3"
 
 [dev-dependencies]
 assert_cmd = "2.0.4"
 predicates = "2.1.1"
 
 
+
 [dependencies]
 image = "0.24.1"
 colored = "2"
-clap = "3.1.8"
+clap = "3.1.9"
 terminal_size = "0.1.17"
 log = "0.4.16"
 env_logger = "0.9.0"
