--- a/Cargo.toml
+++ b/Cargo.toml
@@ -25,21 +25,26 @@ path = "src/main.rs"
 name = "artem"
 path = "src/lib.rs"
 
+
+[[bench]]
+name = "artem_bench"
+harness = false
+
 [build-dependencies]
-clap = "3.1.9"
-clap_complete = "3.1.1"
-clap_mangen = "0.1.3"
+clap = "3.1.10"
+clap_complete = "3.1.2"
+clap_mangen = "0.1.6"
 
 [dev-dependencies]
 assert_cmd = "2.0.4"
 predicates = "2.1.1"
-
+criterion = "0.3.5"
 
 
 [dependencies]
 image = "0.24.1"
 colored = "2"
-clap = "3.1.9"
+clap = "3.1.10"
 terminal_size = "0.1.17"
 log = "0.4.16"
 env_logger = "0.9.0"
