--- a/Cargo.toml
+++ b/Cargo.toml
@@ -31,8 +31,8 @@ name = "artem_bench"
 harness = false
 
 [build-dependencies]
-clap = "3.1.15"
-clap_complete = "3.1.3"
+clap = "3.1.18"
+clap_complete = "3.1.4"
 clap_mangen = "0.1.6"
 
 [dev-dependencies]
@@ -43,10 +43,15 @@ criterion = "0.3.5"
 [dependencies]
 image = "0.24.2"
 colored = "2"
-clap = "3.1.15"
+clap = { version = "3.1.18", features = ["cargo"]}
 terminal_size = "0.1.17"
 log = "0.4.17"
 env_logger = "0.9.0"
+minreq = { version = "2.6.0", features = ["punycode", "https-native"], optional = true }
+
+[features]
+default = ["web_image"]
+web_image = ["dep:minreq"]
 
 
 [package.metadata.deb]
