added center arguments

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,7 +5,7 @@ authors = ["Jonathan (@FineFindus)"]
 description = "Convert images from multiple formats (jpg, png, webp, etc…) to ASCII art"
 edition = "2021"
 readme = "README.md"
-license-file = "LICENSE"
+license = "MPL 2.0"
 homepage = "https://github.com/finefindus/artem"
 repository = "https://github.com/finefindus/artem"
 catogories = ["command-line-utilities"]
