--- a/Cargo.toml
+++ b/Cargo.toml
@@ -4,6 +4,7 @@ version = "1.1.3"
 authors = ["Jonathan (@FineFindus)"]
 description = "Convert images from multiple formats (jpg, png, webp, etc…) to ASCII art"
 edition = "2021"
+rust-version = "1.59.0"
 readme = "README.md"
 license = "MPL-2.0"
 homepage = "https://github.com/finefindus/artem"
@@ -52,7 +53,7 @@ minreq = { version = "2.6.0", features = ["punycode", "https-bundled-probe"], op
 
 [features]
 default = ["web_image"]
-web_image = ["dep:minreq"]
+web_image = ["minreq"]
 
 
 [package.metadata.deb]
