build(release/mac-os): use correct macOs toolchain

--- a/.github/workflows/release_build.yaml
+++ b/.github/workflows/release_build.yaml
@@ -198,6 +198,7 @@ jobs:
         uses: actions-rs/toolchain@v1
         with:
           toolchain: ${{ matrix.rust }}
+          target: ${{ matrix.target }}
           profile: minimal
           override: true
       #use caching for cargo build
