--- a/Cargo.toml
+++ b/Cargo.toml
@@ -39,6 +39,7 @@ clap_mangen = "0.1.8"
 assert_cmd = "2.0.4"
 predicates = "3.0.2"
 criterion = "0.4.0"
+pretty_assertions = "1.3.0"
 
 [dependencies]
 image = "0.24.2"
