build(ci): remove homebrew release

--- a/.github/workflows/release_build.yaml
+++ b/.github/workflows/release_build.yaml
@@ -343,20 +343,20 @@ jobs:
           command: publish
           args: --token ${{ secrets.CARGO_API_KEY }}
 
-  update_homebrew_formula:
-    name: Update Homebrew Formula
-    # Update the released version in the homebrew tap (https://github.com/finefindus/homebrew-tap)
-    # using action from: https://github.com/dawidd6/action-homebrew-bump-formula
-    runs-on: ubuntu-latest # this could alternatively be run on macos
-    steps:
-      - uses: dawidd6/action-homebrew-bump-formula@v3
-        with:
-          # this token will expire after 90 days and should be manually renewed
-          # use this link to create a new one: https://github.com/settings/tokens/new?scopes=public_repo,workflow
-          token: ${{ secrets.HOMEBREW_TAP_TOKEN }}
-          tap: finefindus/homebrew-tap
-          formula: artem
-          force: true
+  # update_homebrew_formula:
+  #   name: Update Homebrew Formula
+  #   # Update the released version in the homebrew tap (https://github.com/finefindus/homebrew-tap)
+  #   # using action from: https://github.com/dawidd6/action-homebrew-bump-formula
+  #   runs-on: ubuntu-latest # this could alternatively be run on macos
+  #   steps:
+  #     - uses: dawidd6/action-homebrew-bump-formula@v3
+  #       with:
+  #         # this token will expire after 90 days and should be manually renewed
+  #         # use this link to create a new one: https://github.com/settings/tokens/new?scopes=public_repo,workflow
+  #         token: ${{ secrets.HOMEBREW_TAP_TOKEN }}
+  #         tap: finefindus/homebrew-tap
+  #         formula: artem
+  #         force: true
 
   publish_aur_package:
     name: Publish AUR package
