--- a/Cargo.toml
+++ b/Cargo.toml
@@ -51,6 +51,7 @@ env_logger = "0.10"
 
 #http client for web images
 minreq = { version = "2.8", features = ["punycode", "https-bundled-probe"], optional = true }
+once_cell = "1.18.0"
 
 [features]
 default = ["web_image"]
