--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,7 +1,7 @@
 [package]
 name = "artem"
 version = "1.2.1"
-authors = ["Jonathan (@FineFindus)"]
+authors = ["@FineFindus"]
 description = "Convert images from multiple formats (jpg, png, webp, etc…) to ASCII art"
 edition = "2021"
 rust-version = "1.70.0"
@@ -48,14 +48,12 @@ clap = { version = "3.2", features = ["cargo"]}
 terminal_size = "0.2.1"
 log = "0.4"
 env_logger = "0.10"
-
-#http client for web images
-minreq = { version = "2.8", features = ["punycode", "https-bundled-probe"], optional = true }
 once_cell = "1.18.0"
+ureq = { version = "2.7.1", optional = true}
 
 [features]
 default = ["web_image"]
-web_image = ["minreq"]
+web_image = ["ureq"]
 
 
 [package.metadata.deb]
