--- a/Cargo.toml
+++ b/Cargo.toml
@@ -31,9 +31,10 @@ name = "artem_bench"
 harness = false
 
 [build-dependencies]
-clap = { version = "3.2", features = ["cargo"]}
-clap_complete = "3.2"
-clap_mangen = "0.1"
+clap = { version = "4.3", features = ["cargo", "derive"]}
+clap_complete = "4.3"
+clap_mangen = "0.2"
+log = "0.4"
 
 [dev-dependencies]
 assert_cmd = "2.0"
@@ -44,7 +45,7 @@ pretty_assertions = "1.3.0"
 [dependencies]
 image = "0.24.6"
 colored = "2.0.4"
-clap = { version = "3.2", features = ["cargo"]}
+clap = { version = "4.3", features = ["cargo"]}
 terminal_size = "0.2.1"
 log = "0.4"
 env_logger = "0.10"
