build(ci): use --offline
Fixes issue with release in https://github.com/FineFindus/artem/actions/runs/5949055157/job/16134358139

--- a/.github/workflows/release_build.yaml
+++ b/.github/workflows/release_build.yaml
@@ -293,7 +293,7 @@ jobs:
         continue-on-error: false
         with:
           command: build
-          args: --locked --release --verbose
+          args: --offline --release --verbose
 
         #copy to completion files from the out directory to the deployment/assets dir
       - name: Copy completion files and man page
