--- a/.github/workflows/release_build.yaml
+++ b/.github/workflows/release_build.yaml
@@ -1,8 +1,3 @@
-# Reference:
-# https://eugene-babichenko.github.io/blog/2020/05/09/github-actions-cross-platform-auto-releases/
-# https://github.com/sharkdp/bat/blob/master/.github/workflows/CICD.yml
-# https://github.com/BurntSushi/ripgrep/blob/master/.github/workflows/release.yml
-
 # This workflow creates all the needed binaries, uploads the binaries to github releases and updates the crate as well as the
 # homebrew tap.
 # The binaries include versions from linux x86_64 and arm, windows gnu and mscv and macos x86_64 and arm versions.
@@ -37,30 +32,13 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Install ${{ matrix.rust }} toolchain
-        uses: actions-rs/toolchain@v1
+        uses: dtolnay/rust-toolchain@master
         with:
           toolchain: ${{ matrix.rust }}
-          profile: minimal
-          override: true
-      #use caching for cargo build
-      - name: Cache dependencies
-        uses: actions/cache@v2
-        with:
-          path: |
-            ~/.cargo/bin/
-            ~/.cargo/registry/index/
-            ~/.cargo/registry/cache/
-            ~/.cargo/git/db/
-            target/
-          key: ${{ runner.os }}-cargo-${{ hashFiles('**/Cargo.lock') }}
 
       - name: Build artem release
-        uses: actions-rs/cargo@v1
         continue-on-error: false
-        with:
-          command: build
-          use-cross: true
-          args: --locked --release --verbose --target=${{ matrix.target }}
+        run: cargo build --locked --release --verbose --target=${{ matrix.target }}
 
           #from: https://github.com/sharkdp/bat/blob/master/.github/workflows/CICD.yml
       - name: Extract Version Number
@@ -117,30 +95,13 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Install ${{ matrix.rust }} toolchain
-        uses: actions-rs/toolchain@v1
+        uses: dtolnay/rust-toolchain@master
         with:
           toolchain: ${{ matrix.rust }}
-          profile: minimal
-          override: true
-      #use caching for cargo build
-      - name: Cache dependencies
-        uses: actions/cache@v2
-        with:
-          path: |
-            ~/.cargo/bin/
-            ~/.cargo/registry/index/
-            ~/.cargo/registry/cache/
-            ~/.cargo/git/db/
-            target/
-          key: ${{ runner.os }}-cargo-${{ hashFiles('**/Cargo.lock') }}
 
       - name: Build artem release
-        uses: actions-rs/cargo@v1
         continue-on-error: false
-        with:
-          command: build
-          use-cross: true
-          args: --locked --release --verbose --target=${{ matrix.target }}
+        run: cargo build --locked --release --verbose --target=${{ matrix.target }}
 
       - name: Extract Version Number
         shell: bash
@@ -195,31 +156,14 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Install ${{ matrix.rust }} toolchain
-        uses: actions-rs/toolchain@v1
+        uses: dtolnay/rust-toolchain@v1
         with:
           toolchain: ${{ matrix.rust }}
           target: ${{ matrix.target }}
-          profile: minimal
-          override: true
-      #use caching for cargo build
-      - name: Cache dependencies
-        uses: actions/cache@v2
-        with:
-          path: |
-            ~/.cargo/bin/
-            ~/.cargo/registry/index/
-            ~/.cargo/registry/cache/
-            ~/.cargo/git/db/
-            target/
-          key: ${{ runner.os }}-cargo-${{ hashFiles('**/Cargo.lock') }}
 
       - name: Build artem release
-        uses: actions-rs/cargo@v1
         continue-on-error: false
-        with:
-          command: build
-          use-cross: true
-          args: --locked --release --verbose --target=${{ matrix.target }}
+        run: cargo build --locked --release --verbose --target=${{ matrix.target }}
 
       - name: Extract Version Number
         shell: bash
@@ -270,30 +214,14 @@ jobs:
         uses: actions/checkout@v4
 
       - name: Install ${{ matrix.rust }} toolchain
-        uses: actions-rs/toolchain@v1
+        uses: dtolnay/rust-toolchain@v1
         with:
           toolchain: ${{ matrix.rust }}
-          profile: minimal
-          override: true
-      #use caching for cargo build
-      - name: Cache dependencies
-        uses: actions/cache@v2
-        with:
-          path: |
-            ~/.cargo/bin/
-            ~/.cargo/registry/index/
-            ~/.cargo/registry/cache/
-            ~/.cargo/git/db/
-            target/
-          key: ${{ runner.os }}-cargo-${{ hashFiles('**/Cargo.lock') }}
 
       #build release, so it contains the completion files
       - name: Build artem release
-        uses: actions-rs/cargo@v1
         continue-on-error: false
-        with:
-          command: build
-          args: --offline --release --verbose
+        run: cargo build --offline --release --verbose
 
         #copy to completion files from the out directory to the deployment/assets dir
       - name: Copy completion files and man page
@@ -303,17 +231,12 @@ jobs:
           cp -u target/release/build/artem-*/out/* deployment/assets/
 
       - name: Install cargo deb
-        uses: actions-rs/cargo@v1
         continue-on-error: false
-        with:
-          command: install
-          args: cargo-deb
+        run: cargo install cargo-deb
 
       - name: Run cargo deb
-        uses: actions-rs/cargo@v1
         continue-on-error: false
-        with:
-          command: deb
+        run: cargo deb
 
       - name: Upload Debian Package
         uses: softprops/action-gh-release@v1
@@ -332,16 +255,12 @@ jobs:
         platform: [ubuntu-latest]
     steps:
       - uses: actions/checkout@v4
-      - uses: actions-rs/toolchain@v1
+      - uses: dtolnay/rust-toolchain@v1
         with:
           toolchain: stable
-          profile: minimal
-          override: true
-      - uses: actions-rs/cargo@v1
+      - name: Publish to creates.io
         continue-on-error: false
-        with:
-          command: publish
-          args: --token ${{ secrets.CARGO_API_KEY }}
+        run: cargo publish --token ${{ secrets.CARGO_API_KEY }}
 
   # update_homebrew_formula:
   #   name: Update Homebrew Formula
