--- a/.github/workflows/release_build.yaml
+++ b/.github/workflows/release_build.yaml
@@ -234,7 +234,7 @@ jobs:
       #build release, so it contains the completion files
       - name: Build artem release
         continue-on-error: false
-        run: cargo build --offline --release --verbose
+        run: cargo build --locked --release --verbose
 
         #copy to completion files from the out directory to the deployment/assets dir
       - name: Copy completion files and man page
